# license-plate-recognition

./: .gitignore  README.md  pyproject.toml
character_segmentation/: dummy.py  dummyv2.py  license_plate_extract_all_characters.py
license_plate_recognition/: main.py
license_plate_recognition/plate_detection/: service.py  yolov3-test.cfg
license_plate_recognition/plate_detection/implementation/: Yolov3.ipynb  anchorbox_clustring.ipynb  blocks.py
license_plate_recognition/plate_detection/implementation/utils/: analyze_anotations.py  extract_plate.py  utils.py
license_plate_recognition/plate_detection/implementation/utils/tests/: test_utils.py
license_plate_recognition/plate_detection/implementation/yolo/: const.py  dataset.py  loss.py  train.py  utils.py
license_plate_recognition/recognition/: data-processing.ipynb  service.py
license_plate_recognition/segmentation/: README.md  service.py  testSegmentation.py
plate_detection/: Yolov3.ipynb  blocks.py  plate_detection.ipynb  yolov3.cfg
plate_detection/utils/: coco_to_darknet.py  prepare_darknet_data.py  resize_416.py  utils.py
plate_detection/utils/tests/: test_utils.py
plate_detection/yolo/: augmentation.py  const.py  dataset.py  loss.py  train.py  utils.py
scripts/: setup_darknet.py
